feat: Add analytics system, frontend dashboard, pagination, validation, Docker support
- Analytics API: velocity, ABC analysis, dead stock, reorder suggestions, sales trend, purchase vs sales, warehouse stock
- Enhanced reports with date filtering and env var config
- Thymeleaf frontend with 9 pages (dashboard, stock, analytics charts)
- Pagination on all list endpoints (page/size/sort params)
- Validation annotations on all DTOs with @Valid
- Environment variables for DB, JWT, and mail credentials
- Dockerfile and docker-compose.yml for cloud deployment
- README.md with full documentation